# Litan-SFML

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  run.sh
ltn/: sfml.ltn
src/: CMakeLists.txt  bindings.cxx  bindings.hxx
test/: main.ltn
